--- a/app/views/messages/_messages_list.html.erb
+++ b/app/views/messages/_messages_list.html.erb
@@ -62,6 +62,6 @@
 
   <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
     <p class="font-semibold">No messages yet</p>
-    <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]"><%= raw messages.sample %></p>
+    <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]"><%== messages.sample %></p>
   </div>
 <% end %>
