--- a/app/views/pages/landing.html.erb
+++ b/app/views/pages/landing.html.erb
@@ -242,7 +242,7 @@
             <div class="-mr-6 pr-6 space-y-4">
               <% testimonial[:paragraphs].each do |paragraph| %>
                 <p class="text-pretty text-light">
-                  <%= raw paragraph %>
+                  <%== paragraph %>
                 </p>
               <% end %>
 
