fix(topics): resolve incorrect dropdown open class causing opacity issue

--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -40,7 +40,7 @@
       data-controller="dropdown"
       data-dropdown-hide-dropdown-class="pointer-events-none scale-75 opacity-0"
       data-dropdown-show-dropdown-class="pointer-events-auto scale-100 opacity-100"
-      data-dropdown-dropdown-open-class="bg-slate-200/50 dark:bg-slate-700/50 ring-2 ring-indigo-500/50"
+      data-dropdown-dropdown-open-class="shadow-md"
       class="relative rounded-lg grid place-items-center my-2 group-first/container:mt-0 group-last/container:mb-0"
     >
       <button
