--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -116,7 +116,11 @@
   }
 
   .card-opaque {
-    @apply p-4 sm:p-6 rounded-xl bg-white dark:bg-slate-800 shadow-md dark:shadow-none border border-slate-200 dark:border-slate-700;
+    @apply p-4 sm:p-6 rounded-xl bg-white dark:bg-slate-800;
+  }
+
+  .frame-glass {
+    @apply p-2 rounded-2xl sm:rounded-2xl bg-slate-100/30 dark:bg-slate-300/30 border-[0.5px] border-slate-200/40 dark:border-slate-500/40;
   }
 
   .dropdown-toggle {
